# pharo-exe

./: CMakeLists.txt  README.md  data.txt  main.cpp
include/: timing.cpp
